--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,11 +1,13 @@
-[prune]
-  go-tests = true
-  unused-packages = true
+required = ["gocv.io/x/gocv/openvino"]
 
 [[constraint]]
   name = "gocv.io/x/gocv"
-  version = "0.17.0"
+  branch = "dev"
 
 [[constraint]]
   name = "github.com/eclipse/paho.mqtt.golang"
   version = "1.1.1"
+
+[prune]
+  go-tests = true
+  unused-packages = true
